fix for spacing at top off pages w/ nav

--- a/css/site.scss
+++ b/css/site.scss
@@ -172,10 +172,10 @@ $logowid: 143px + $bodybdwid;
 
 .content {
 
-  > p:first-of-type {
-    margin-top: 2em;
+  &.hasnav {
+    padding-top:1em;
   }
-
+  
   > * {
     margin-left: 1%;
   }
